...
  @override
  State<_ManualSleepSheet> createState() => _ManualSleepSheetState();
}

class _ManualSleepSheetState extends State<_ManualSleepSheet> {
  late TextEditingController _hoursController;
  String _quality = 'Good';
  static const _qualities = ['Poor', 'Fair', 'Good', 'Excellent'];

  @override
  void initState() {
    super.initState();
    _hoursController = TextEditingController(
...
